@@ -1,9 +1,11 @@
 package akc.plugin.playerpenalty.commands;
 
 import akc.plugin.playerpenalty.PlayerPenaltyPlugin;
-import akc.plugin.playerpenalty.config.ConfigurationFields;
-import akc.plugin.playerpenalty.domain.Ticket;
-import akc.plugin.playerpenalty.manager.TicketManager;
+import akc.plugin.playerpenalty.domain.ArgumentType;
+import akc.plugin.playerpenalty.domain.entities.TicketEntity;
+import akc.plugin.playerpenalty.manager.TransformerManager;
+import akc.plugin.playerpenalty.manager.ValidationManager;
+import akc.plugin.playerpenalty.repository.TicketRepository;
 import org.bukkit.Bukkit;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
@@ -12,42 +14,105 @@ import org.bukkit.entity.Player;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
-import java.time.LocalDateTime;
-import java.time.ZoneId;
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
-import java.util.function.Function;
+import java.util.Objects;
 import java.util.stream.Collectors;
 
+@SuppressWarnings({"java:S3740", "unchecked"})
 public abstract class AbstractCommand implements TabExecutor {
 
     private static final List<String> DURATION_SUGGESTIONS = List.of("1d", "10m", "5h30m", "40s", "2w");
-    protected final List<SubCommand> subCommands;
+    private static final List<String> NUMBER_SUGGESTIONS = List.of("1", "10", "100", "1000");
+    private final List<SubCommand<?>> subCommands = new ArrayList<>();
     protected final PlayerPenaltyPlugin plugin;
-    protected final TicketManager ticketManager;
+    protected final TicketRepository ticketRepository;
+    protected final ValidationManager validationManager;
+    protected final TransformerManager transformerManager;
 
-    private final String currentZone;
     private final String commandName;
+    private final List<Class<?>> allowedSenders;
 
-    protected AbstractCommand(List<SubCommand> subCommands, PlayerPenaltyPlugin plugin, String commandName) {
-        this.subCommands = subCommands;
+    protected AbstractCommand(PlayerPenaltyPlugin plugin, String commandName, List<Class<?>> allowedSenders) {
         this.plugin = plugin;
         this.commandName = commandName;
-        this.currentZone = plugin.getConfigManager().getConfigValue(ConfigurationFields.CURRENT_ZONE_ID);
-        this.ticketManager = plugin.getTicketManager();
+        this.ticketRepository = plugin.getTicketRepository();
+        this.validationManager = plugin.getValidationManager();
+        this.transformerManager = plugin.getTransformerManager();
+        this.allowedSenders = allowedSenders;
+        subCommands.addAll(createSubCommands());
     }
+
+    @SuppressWarnings("java:S1452")
+    protected abstract List<SubCommand<?>> createSubCommands();
+
+    protected abstract boolean handleCommand(CommandSender sender, TicketEntity ticketBuilder, String[] args);
 
     public String getCommandName() {
         return commandName;
     }
 
     @Override
+    public boolean onCommand(@NotNull CommandSender sender, @NotNull Command command, @NotNull String label, @NotNull String[] args) {
+        final var isSenderAllowed = allowedSenders.stream()
+                .anyMatch(it -> it.isInstance(sender));
+        if (!isSenderAllowed) {
+            sender.sendMessage("эту комманду нельзя использовать через " + sender.getName());
+            sender.sendMessage("Допустимые отправители: " + allowedSenders.stream().map(Class::getSimpleName).collect(Collectors.toSet()));
+            return true;
+        }
+
+        final var combinedStringArgs = combineStringArgs(args);
+        final var ticketBuilder = new TicketEntity();
+        final var requestIsValid = validateAndBuild(subCommands.stream().map(SubCommand.class::cast).toList(), combinedStringArgs, ticketBuilder, 0, sender);
+        if (!requestIsValid) {
+            return true;
+        }
+
+        return handleCommand(sender, ticketBuilder, combinedStringArgs);
+    }
+
+    private boolean validateAndBuild(List<SubCommand> commands, String[] args, TicketEntity ticketBuilder, int currentArg, CommandSender sender) {
+        if (commands.isEmpty()) {
+            return true;
+        }
+        if (args.length <= currentArg) {
+            sender.sendMessage("Недостаточно параметров");
+            return false;
+        }
+
+        int finalCurrentArg = currentArg;
+        final var subCommandOpt = commands.stream()
+                .filter(subCommand -> {
+                    final var transformedValue = subCommand.getArgumentType().equals(ArgumentType.TICKET_NUMBER) ?
+                            subCommand.getPlayerValueTransformer().apply(args[finalCurrentArg], sender) :
+                            subCommand.getValueTransformer().apply(args[finalCurrentArg]);
+                    final var isCommandValid = subCommand.getValidationFunction().test(transformedValue);
+                    if (isCommandValid) {
+                        subCommand.getBuildAppender().apply(ticketBuilder, transformedValue);
+                    }
+                    return isCommandValid;
+                })
+                .findFirst();
+
+        if (subCommandOpt.isEmpty()) {
+            sender.sendMessage("Недопустимое значение: " + args[currentArg]);
+            return false;
+        }
+        return validateAndBuild(subCommandOpt.get().getSubCommands(), args, ticketBuilder, ++currentArg, sender);
+    }
+
+    @Override
     public @Nullable List<String> onTabComplete(@NotNull CommandSender sender, @NotNull Command command, @NotNull String label, @NotNull String[] args) {
+        if (allowedSenders.stream().noneMatch(allowedSender -> allowedSender.isInstance(sender))) {
+            return null;
+        }
         return getSuggestions(subCommands, 0, args, sender);
     }
 
-    private List<String> getSuggestions(List<SubCommand> subCommands, int depth, String[] args, @NotNull CommandSender sender) {
+    private List<String> getSuggestions(List<SubCommand<?>> subCommands, int depth, String[] args, @NotNull CommandSender sender) {
         String[] combineStringArgs = combineStringArgs(args);
         if (depth == combineStringArgs.length - 1) {
 
@@ -59,7 +124,7 @@ public abstract class AbstractCommand implements TabExecutor {
             if (anyCommandAllowsPlayer) {
                 final var playerNames = Bukkit.getOnlinePlayers().stream()
                         .map(Player::getName)
-                        .collect(Collectors.toList());
+                        .toList();
                 commandsSuggestions.addAll(playerNames);
             }
 
@@ -68,14 +133,18 @@ public abstract class AbstractCommand implements TabExecutor {
                 commandsSuggestions.addAll(DURATION_SUGGESTIONS);
             }
 
-            final var anyCommandAllowsTicketNumber = subCommands.stream().anyMatch(it -> it.getArgumentType().equals(ArgumentType.TICKET_NUMBER));
-            if (anyCommandAllowsTicketNumber && sender instanceof Player player) {
-                final var notPaidIssues = ticketManager.findOpenIssues(player).stream()
-                        .map(Ticket::getTicketNumber)
-                        .collect(Collectors.toList());
-
-                commandsSuggestions.addAll(notPaidIssues);
+            final var anyCommandAllowsNumber = subCommands.stream().anyMatch(it -> it.getArgumentType().equals(ArgumentType.NUMBER));
+            if (anyCommandAllowsNumber) {
+                commandsSuggestions.addAll(NUMBER_SUGGESTIONS);
             }
+
+            subCommands.stream()
+                    .map(SubCommand::getCustomSuggestionProvider)
+                    .filter(Objects::nonNull)
+                    .map(it -> it.apply((Player) sender))
+                    .flatMap(Collection::stream)
+                    .map(String.class::cast)
+                    .forEach(commandsSuggestions::add);
 
             return commandsSuggestions;
         }
@@ -105,7 +174,7 @@ public abstract class AbstractCommand implements TabExecutor {
             }
 
             if (insideQuotes) {
-                oneParamBuilder.append(arg.replaceAll("\"", ""));
+                oneParamBuilder.append(arg.replace("\"", ""));
             }
 
             if (arg.endsWith("\"")) {
@@ -123,41 +192,11 @@ public abstract class AbstractCommand implements TabExecutor {
         return argsToReturn.toArray(new String[0]);
     }
 
-    private boolean commandIsTyped(SubCommand subCommand, String typedValue) {
+    private boolean commandIsTyped(SubCommand<?> subCommand, String typedValue) {
         final var argumentType = subCommand.getArgumentType();
         if (argumentType.equals(ArgumentType.COMMAND)) {
             return typedValue.equals(subCommand.getCommandValue());
         }
         return true;
     }
-
-    protected LocalDateTime getTimeFromDuration(String duration) {
-        var currentTime = LocalDateTime.now(ZoneId.of(currentZone));
-
-        for (String adjustment : duration.split("(?<=[wmsdh])(?=\\d)")) {
-            final var adjustmentFunc = toLocalDateAdjustment.apply(adjustment);
-            currentTime = adjustmentFunc.apply(currentTime);
-        }
-
-        return currentTime;
-    }
-
-    private Function<String, Function<LocalDateTime, LocalDateTime>> toLocalDateAdjustment = arg -> {
-        if (arg.contains("w")) {
-            return localDateTime -> localDateTime.plusWeeks(Long.parseLong(arg.substring(0, arg.length() - 1)));
-        }
-        if (arg.contains("s")) {
-            return localDateTime -> localDateTime.plusSeconds(Long.parseLong(arg.substring(0, arg.length() - 1)));
-        }
-        if (arg.contains("m")) {
-            return localDateTime -> localDateTime.plusMinutes(Long.parseLong(arg.substring(0, arg.length() - 1)));
-        }
-        if (arg.contains("d")) {
-            return localDateTime -> localDateTime.plusDays(Long.parseLong(arg.substring(0, arg.length() - 1)));
-        }
-        if (arg.contains("h")) {
-            return localDateTime -> localDateTime.plusHours(Long.parseLong(arg.substring(0, arg.length() - 1)));
-        }
-        return Function.identity();
-    };
 }
